fix bug on jumping link to about and special menu links

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 html {
   font-family: var(--font-karla);
-
+  scroll-behavior: smooth;
   font-size: 62.5%;
   color: #333333;
 }
